--- a/.ci/jenkins/config/branch.yaml
+++ b/.ci/jenkins/config/branch.yaml
@@ -1,40 +1,53 @@
+job_types:
+  setup-branch:
+    disabled: false
+  nightly:
+    disabled: false
+  other:
+    disabled: true
+  pullrequest:
+    disabled: false
+  release:
+    disabled: true
+  tools:
+    disabled: false
 environment: ''
-productized_branch: true
+productized_branch: false
 disable:
   triggers: false
 repositories:
 - name: quarkiverse-specs-common
 git:
   author:
-    name: kiegroup
-    credentials_id: kie-ci
-    token_credentials_id: kie-ci3-token
-  bot_author:
-    name: bsig-gh-bot
-    credentials_id: bsig-gh-bot
-  fork_author:
-    name: kie-ci
-    credentials_id: kie-ci
-  quarkus:
+    name: radtriste
+    credentials_id: radtriste
+    token_credentials_id: radtriste-gh-token
+  bot_author: # This is meant to disappear in the near future
+    name: radtriste-bot-account
+    credentials_id: radtriste-bot
+  fork_author: # Used on repository where a fork is needed
+    name: radtriste-bot-account
+    credentials_id: radtriste-bot
+  quarkus: # Used by quarkus platform jobs
     author:
-      name: quarkusio
-      credentials_id: kie-ci
+      name: radtriste
+      credentials_id: radtriste
     branch: main
   jenkins_config_path: .ci/jenkins
 maven:
-  settings_file_id: kogito_release_settings
+  settings_file_id: 2bd418aa-56fa-4403-9232-8c77a50fc528
   nexus:
-    release_url: https://repository.jboss.org/nexus
+    release_url: https://repository.stage.jboss.org/nexus
     release_repository: jboss-releases-repository
-    staging_profile_url: https://repository.jboss.org/nexus/content/groups/kogito-public/
-    staging_profile_id: 1976dd1c18392a
-    build_promotion_profile_id: ea49ccd6f174
-  artifacts_repository: ''
+    staging_profile_url: https://repository.stage.jboss.org/nexus/content/groups/kogito-public/
+    staging_profile_id: 2161b7b8da0080
+    build_promotion_profile_id: 1966c60aff37d
+  artifacts_repository: http://nexus3-tradisso-nexus.apps.kogito-cloud.hosted.psi.rdu2.redhat.com/repository/kogito-test/
   artifacts_upload_repository:
-    url: https://repository.jboss.org/nexus/content/repositories/snapshots/
-    creds_id: kie-ci1-upload
+    url: http://nexus3-tradisso-nexus.apps.kogito-cloud.hosted.psi.rdu2.redhat.com/repository/kogito-test/
+    creds_id: anything
 jenkins:
-  email_creds_id: QUARKIVERSE_CI_EMAIL_TO
+  email_creds_id: KOGITO_CI_EMAIL_TO_PERSO
   default_tools:
     jdk: kie-jdk11
     maven: kie-maven-3.8.6
