--- a/.ci/jenkins/config/branch.yaml
+++ b/.ci/jenkins/config/branch.yaml
@@ -34,6 +34,9 @@ git:
       credentials_id: radtriste
     branch: main
   jenkins_config_path: .ci/jenkins
+buildchain_config:
+  git:
+    repository: quarkiverse-specs-common
 maven:
   settings_file_id: 2bd418aa-56fa-4403-9232-8c77a50fc528
   nexus:
