--- a/.ci/jenkins/config/branch.yaml
+++ b/.ci/jenkins/config/branch.yaml
@@ -8,7 +8,7 @@ job_types:
   pullrequest:
     disabled: false
   release:
-    disabled: true
+    disabled: false
   tools:
     disabled: false
 environment: ''
